<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="all_music_title">All Music</string>
    <string name="playlist_title">Play List</string>
    <string name="search_title">Search</string>
    <string name="search_true">Search Sucess!</string>
    <string name="is_play">Playing</string>
    <string name="is_pause">Pause</string>
    <string name="folder_scan">Directory Browsing</string>
    <string name="search_resualt">Search Results：</string>
    <string name="search_false">Search Results is Empty！</string>
    <string name="search_noinput">Please Input you want to search the content!</string>
    <string name="about_text">RockChip</string>
    <string name="about_edition">Version：V1.05</string>
    <string name="about_date">Data：2009-12-09</string>
    <string name="about_time">Time：22:12</string>
    <string name="rk_www">www.rock-chips.com</string>
    <string name="notification">Rkplayer Player</string>
    <string name="imcoming_message_ticker_text">New rkplayer message: %0$s</string>
    <string name="lyric">歌词</string>
    <string name="lyric_search_false">满足搜索条件歌词未找到</string>
    <string name="search_lrc_down">歌词来自</string>
    <string name="search_lrc_begin">http</string>
    <string name="text_gb2312">百度</string>
    <string name="music_title">音乐</string>
    <string name="played_title">Recently play</string>
    <string name="played">最近播放</string>
    <string name="artist">artist</string>
    <string name="album">album</string>
    <string name="directory_title">Music</string>
    <string name="genre_title">genre</string>
    <string name="volume">30</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="unknown_genre_name">Unknown genre</string>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="new_playlist_name_template1">Playlist 0%d</string>
    <string name="new_playlist_name_template2">Playlist%d</string>
    <string name="play_all">Play all</string>
    <string name="recentlyadded">Recently Played</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="playlist_deleted_message">Playlist has been deleted.</string>
    <string name="durationformat">%2$02d:%2$02d:%6$02d</string>
    <string name="working_albums">Albums…</string>
    <string name="working_songs">Songs…</string>
    <string name="albums">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="artists_title">Artists</string>
    <string name="onesong">one song</string>
    <string name="albumsongseparator">,</string>
    <string name="genresongseparator">,</string>
    <string name="app_name">Audio Player</string>
    <string name="act_name">Audio Player</string>
    <string name="ringtone_set">\"%s\" Setting for cell phone rings.</string>
    <string name="addplaylist_text">New playlist</string>
    <string name="playfxstr">Microsoft sound</string>
    <string name="aboutstr">About</string>
    <string name="lrcstatestr">Lyrics State</string>
    <string name="displayliststr">Playlist</string>
    <string name="playlist_operate_add">The song has been added to the playlist</string>
    <string name="cannot_delete_playlist">Sorry, can not delete the playlist!</string>
    <string name="cannot_add_song">Sorry, can not add the playlist</string>
    <string name="song_already_in_playlist">This song has been in the playlist</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_missing_message">Your MID does not have an SD card inserted.</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="mediasearch">Search for %s using:</string>
    <string name="notification_artist_album">%2$s\n%1$s</string>
    <string name="streamloadingtext">Connecting to</string>
    <string name="scanning">Scanning SD card</string>
    <string name="searchsongInfo">Click here, from the Internet information search songs。</string>
    <string name="search_play">Play</string>
    <string name="search_down">DownLoad</string>
    <string name="search_nextpage">NextPage</string>
    <string name="search_prepage">PrePage</string>
    <string name="search_detailinfo">Detailed information</string>
    <string name="search_morelink">More links</string>
    <string name="search_action">Move</string>
    <string name="loading_wait">Be Patient ! It is searching......</string>
    <string name="connectingsite">Connecting to a site...:</string>
    <string name="downloading_file">Downloading files...</string>
    <string name="download_suspend">Download interruptions!</string>
    <string name="FinishDownLoad">The download is complete!</string>
    <string name="NetSearch">Internet search</string>
    <string name="netsearch_input">Please enter the singer, songs or album name...</string>
    <string name="searchnet_return">return</string>
    <string name="Download_limit">Each can only download a song, please try later!</string>
    <string name="No_Music">No music files, please copy the file!</string>
    <string name="playback_failed">Excuse me, is not supported by the player you click on this type of sound!</string>
    <string name="HintAddPlayList">Sorry, can not add network songs to play list!</string>
    <string name="HintLrc">Sorry, broadcast networks, not search lyrics songs!</string>
    <string name="HintSearchConten">Search content is empty, please enter a search content!</string>
    <string name="newsong">New Song</string>
    <string name="hotsong">Hot Song</string>
    <string name="EA_Pop">Euramerican popularity</string>
    <string name="JK_Pop">Japan fashion</string>
    <string name="Classic">Classic songs</string>
    <string name="homepage">Search this song</string>
    <string name="longPressfail">This song is network songs!</string>
    <string name="ishomepage">Please according to search for long this song.</string>
    <string name="searchexception">Search abnormalities, please check whether the network or the input are open?</string>
    <string name="searchfail">Search failure, please search!</string>
    <string name="songupdata">Songs have updated!</string>
    <string name="media_volume_title">Media volume</string>
    <string name="PrePage">PrePage</string>
    <string name="NextPage">NextPage</string>
    <string name="canceldowndialog">Are you sure you want to cancel this download?</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="NoFileDownload">No download files,Please long press the item to download !</string>
    <string name="DownLoad_Page">DownLoad</string>
    <string name="breakpoint_play">Breakpoint Play</string>
    <string name="No_free_memory">Not enough space in the flash！</string>
    <string name="error_mediadb_new_download">Unable to save download audio</string>
    <string name="mediaplayerror">Server connection timeout!</string>
    <string name="download_title">Download history</string>
    <string name="download_unknown_filename">&lt;Unknown&gt;</string>
    <string name="download_menu_open">Open</string>
    <string name="download_menu_clear">Clear from list</string>
    <string name="download_menu_cancel">Cancel download</string>
    <string name="download_menu_cancel_all">Cancel all downloads</string>
    <string name="download_menu_clear_all">Clear list</string>
    <string name="download_clear_dlg_title">Clear</string>
    <string name="download_clear_dlg_msg">All items will be cleared from the list and removed from the browser cache.</string>
    <string name="download_cancel_dlg_title">Cancel downloads</string>
    <string name="download_cancel_dlg_msg">All %d downloads will be canceled and cleared from the download history.</string>
    <string name="download_file_error_dlg_title">Out of space</string>
    <string name="download_file_error_dlg_msg">%s could not be downloaded.\nFree up some space on your phone and try again.</string>
    <string name="download_failed_generic_dlg_title">Download unsuccessful</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">An SD card is required to download %s.</string>
    <string name="download_sdcard_busy_dlg_title">SD card unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The SD card is busy. To allow downloads, select \"Turn off USB storage\" in the notification.</string>
    <string name="download_no_application">No application can be found to open this file.</string>
    <string name="retry">Retry</string>
    <string name="no_downloads">Download history is empty.</string>
    <string name="download_error">Download unsuccessful.</string>
    <string name="download_success">%s Download complete.</string>
    <string name="download_running">Downloading…</string>
    <string name="download_pending">Starting download…</string>
    <string name="download_pending_network">Waiting for data connection…</string>
    <string name="download_running_paused">Waiting for data connection…</string>
    <string name="download_canceled">Download canceled.</string>
    <string name="download_not_acceptable">Cannot download. The content is not supported on the phone.</string>
    <string name="download_file_error">Cannot finish download. There is not enough space.</string>
    <string name="download_length_required">Cannot download. The size of the item cannot be determined.</string>
    <string name="download_precondition_failed">Download interrupted. It cannot be resumed.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_support">Do not support the format of the music</string>
    <string name="load_title">Working...</string>
    <string name="wait">Please wait a moment</string>
    <string name="lrcsearch">Searching...</string>
    <string name="lrcwait">It is searching lyric, Please wait a moment...</string>
    <string name="netsearchmesg">Please wait for a while...Is opening the link stand for you ...</string>
    <string name="flash_busy_title">Flash unavailable</string>
    <string name="flash_busy_message">Sorry,your Flash is busy.</string>
</resources>
